--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link href="css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	  <meta name="facebook-domain-verification" content="jsnq7x6cm0gadxhwflfomm4b3cb98r" />	  
 
   </head>
   <body>
